# skillctl-fork

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: CNAME  index.html
skillctl/: __init__.py  animation.py  cli.py  config.py  manifest.py  output.py  renderables.py  setup.py  theme.py
skillctl/discovery/: enrichment.py  github.py  local.py  ranking.py  registry.py
skillctl/importer/: git_ops.py  linker.py
skillctl/learn/: __init__.py  loader.py  renderer.py
skillctl/learn/content/: anatomy.md  organize.md  write.md
skillctl/learn/content/examples/: api-patterns.md  sql-standards.md
skillctl/lint/: __init__.py
skillctl/scaffold/: creator.py
skillctl/scaffold/templates/: SKILL.md.j2
skillctl/utils/: frontmatter.py
tests/: conftest.py  test_cli.py  test_config.py  test_discovery.py  test_frontmatter.py  test_importer.py  test_learn.py  test_lint.py  test_manifest.py  test_scaffold.py
